@startuml
'https://plantuml.com/class-diagram


Game --> HeroAircraft

class Game{
    - heroAircraft:HeroAircraft
}

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    - heroAircraft:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + getHeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp):HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
    + getShootNumber() : inttT
    + increaseHp(int increase) : void
    + increaseBullet(int bulletNumber) : void
}

HeroAircraft <-- HeroAircraft
@enduml